--- a/uptime/localhtml/index.html
+++ b/uptime/localhtml/index.html
@@ -5,47 +5,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>taoj - uptime</title>
 <style>
-  * {
-    margin: 0;
-    padding: 0;
-    font-family: 'Courier New', monospace;
-    transition: all 0.3s ease-in-out;
-  }
-
-  body {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center; 
-    background: #111;
-    color: #fff;
-  }
-
-  .clock {
-    width: 360px;
-    text-align: center;
-  }
-
-  .date {
-    font-size: 2rem;
-    margin-bottom: 10px;
-  }
-
-  .time {
-    display: flex;
-    justify-content: center;
-    font-size: 4rem;
-  }
-
-  .time div {
-    width: 60px;
-    text-align: center;
-  }
-
-  .colon {
-    width: 20px;
-  }
+  * { margin:0; padding:0; font-family:'Courier New', monospace; transition:all 0.3s ease-in-out; }
+  body { width:100%; height:100vh; display:flex; justify-content:center; align-items:center; background:#111; color:#fff; }
+  .clock { width:360px; text-align:center; }
+  .date { font-size:2rem; margin-bottom:10px; }
+  .time { display:flex; justify-content:center; font-size:4rem; }
+  .time div { width:60px; text-align:center; }
+  .colon { width:20px; }
 </style>
 </head>
 <body>
@@ -61,28 +27,25 @@
 </div>
 
 <script>
+document.addEventListener('DOMContentLoaded', () => {
   function clock() {
     const d = new Date();
-
     const year = d.getFullYear().toString().padStart(2,'0');
     const month = (d.getMonth()+1).toString().padStart(2,'0');
     const day = d.getDate().toString().padStart(2,'0');
-
     const weekDays = ['SUN','MON','TUE','WED','THU','FRI','SAT'];
     const weekDay = weekDays[d.getDay()];
-
     const hr = d.getHours().toString().padStart(2,'0');
     const min = d.getMinutes().toString().padStart(2,'0');
     const sec = d.getSeconds().toString().padStart(2,'0');
-
     document.querySelector('.date').textContent = `${year}-${month}-${day} ${weekDay}`;
     document.querySelector('.hr').textContent = hr;
     document.querySelector('.min').textContent = min;
     document.querySelector('.sec').textContent = sec;
   }
-
   clock();
   setInterval(clock, 1000);
+});
 </script>
 </body>
 </html>
