Committed from push.sh

--- a/uptime/localhtml/index.html
+++ b/uptime/localhtml/index.html
@@ -4,26 +4,32 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>taoj - uptime</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Special+Gothic+Expanded+One&display=swap" rel="stylesheet">
+
 <style>
-  * { margin:0; padding:0; font-family:'Courier New', monospace; transition: all 0.3s ease-in-out; }
+  * { margin:0; padding:0; font-family:'Montserrat', monospace; transition: all 0.3s ease-in-out; }
   body { width:100%; height:100vh; display:flex; justify-content:center; align-items:center; background:#111; color:#fff; }
   .clock { text-align:center; }
   .date { font-size:2rem; margin-bottom:10px; }
   .time { display:flex; justify-content:center; font-size:4rem; }
   .time div { width:60px; text-align:center; }
   .colon { width:20px; }
+
+  .gothicspecial { font-family: 'Special Gothic Expanded One', sans-serif; }
 </style>
 </head>
 <body>
 
 <div class="clock">
-  <div class="date" id="date">--</div>
-  <div class="time">
-    <div id="hr">--</div>
-    <div class="colon">:</div>
-    <div id="min">--</div>
-    <div class="colon">:</div>
-    <div id="sec">--</div>
+  <div class="date gothicspecial" id="date">--</div>
+  <div class="time gothicspecial">
+    <div id="hr gothicspecial">--</div>
+    <div class="colon gothicspecial">:</div>
+    <div id="min gothicspecial">--</div>
+    <div class="colon gothicspecial">:</div>
+    <div id="sec gothicspecial">--</div>
   </div>
 </div>
 
